Improved UX/UI.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
 	<div class="container">
-		<img id="sample-image" src="images/franco.jpg">
-		<div id="point-container">
+		<div id="image-container">
+			<img id="sample-image" src="images/franco.jpg">
+			<div id="point-container">
+			</div>
+			<div id="click-field"></div>
 		</div>
+		<div id="plot-container"></div>
 		<div class="options">
-			<button id="undo" class="btn waves-effect waves-light"><i class="material-icons">undo</i></button>
+			<button id="undo" class="btn waves-effect waves-light black"><i class="material-icons">undo</i></button>
 		</div>
-		<canvas id="canvas"></canvas>
 	</div>
 </body>
 
