--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 	<nav class="blue-grey">
 		<a href="#" data-target="menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		<a href="#" data-target="plots" class="sidenav-trigger"><i class="material-icons">linear_scale</i></a>
-		<ul class="right">
-			<a href="#" id="undo" class="waves-effect waves-light">
-				<i class="material-icons">undo</i>
-				
-			</a>
+		<ul class="right hide-on-med-and-down">
+			<li><a href="#" id="undo" class="waves-effect waves-light"><i class="material-icons left">undo</i> Undo</a></li>
+			<li class="active"><a class="waves-effect" href="form.html">Measurement Form</a></li>
+			<li><a class="waves-effect" href="!#">Image Interface</a></li>
 		</ul>
 	</nav>
 
