Plotted lines now visible at larger screens.

--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
   
 	<div class="container">
 		<div class="row">
-			<form class="col s12">
+			<form class="col s12 l8 offset-l2">
 
 				<div class="row">
 					<h5>
@@ -84,35 +84,35 @@
 						</label></p>
 					</div>
 
-					<div class="input-field col s4">
+					<div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="chest" type="text" class="validate">
 			        	<label class="active text-uppercase" for="chest">Chest</label>
 			        </div>
-			        <div class="input-field col s4">
+			        <div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="waist" type="text" class="validate">
 			        	<label class="active text-uppercase" for="waist">Waist</label>
 			        </div>
-			        <div class="input-field col s4">
+			        <div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="hips" type="text" class="validate">
 			        	<label class="active text-uppercase" for="hips">Hips</label>
 			        </div>
-					<div class="input-field col s4">
+					<div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="inseam" type="text" class="validate">
 			        	<label class="active text-uppercase" for="inseam">Inseam</label>
 			        </div>
-			        <div class="input-field col s4">
+			        <div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="neck" type="text" class="validate">
 			        	<label class="active text-uppercase" for="neck">Neck</label>
 			        </div>
-			        <div class="input-field col s4">
+			        <div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="sleeve" type="text" class="validate">
 			        	<label class="active text-uppercase" for="sleeve">Sleeve</label>
 			        </div>
-					<div class="input-field col s4">
+					<div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="height" type="text" class="validate">
 			        	<label class="active text-uppercase" for="height">Height</label>
 			        </div>
-			        <div class="input-field col s4">
+			        <div class="input-field col s4 l2">
 			        	<input placeholder="cm" id="weight" type="text" class="validate">
 			        	<label class="active text-uppercase" for="weight">Weight</label>
 			        </div>
