--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		<a href="#" data-target="menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		<a href="#" data-target="plots" class="sidenav-trigger"><i class="material-icons">linear_scale</i></a>
 		<ul class="right hide-on-med-and-down">
-			<li><a href="#" id="undo" class="waves-effect waves-light"><i class="material-icons left">undo</i> Undo</a></li>
 			<li class="active"><a class="waves-effect" href="form.html">Measurement Form</a></li>
 			<li><a class="waves-effect" href="!#">Image Interface</a></li>
+		</ul>
+		<ul class="right show-on-med-and-down">
+			<li><a href="#" id="undo" class="waves-effect waves-light"><i class="material-icons left">undo</i> Undo</a></li>
 		</ul>
 	</nav>
 
@@ -34,6 +36,7 @@
 	</ul>
 
 	<div class="container">
+		<div id="plot-container-lg-screen" class="hide-on-med-and-down"></div>
 		<div id="image-container">
 			<img id="sample-image" src="images/franco.jpg">
 			<div id="point-container">
