--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
 		<div class="nav-wrapper">
 			<a href="#" data-target="menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
-				<li class="active"><a class="waves-effect" href="#!">Measurement Form</a></li>
+				<li class="active"><a class="waves-effect" href="#">Measurement Form</a></li>
 				<li><a class="waves-effect" href="index.html">Image Interface</a></li>
 			</ul>
 		</div>
