--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<ul id="menu" class="sidenav">
 		<li><a class="subheader">Wish to go somewhere else?</a></li>
 		<li><a class="waves-effect blue-grey-text" href="form.html">Measurement Form</a></li>
-		<li><a class="waves-effect" href="!#">Image Interface</a></li>
+		<li><a class="waves-effect" href="#">Image Interface</a></li>
 	</ul>
 
 	<ul id="plots" class="sidenav">
