Image size fixed; Euclidean and Actual measurements now returns more exact values.

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 	</ul>
 
 	<div class="container">
-		<div id="plot-container-lg-screen" class="hide-on-med-and-down"></div>
+		<div id="plot-container-lg-screen" class="hide-on-sm"></div>
 		<div id="image-container">
-			<img id="sample-image" src="images/franco.jpg">
-			<div id="point-container">
-			</div>
+			<img id="sample-image" src="images/checker.png">
+			<div id="point-container"></div>
 			<div id="click-field"></div>
 		</div>
 	</div>
