--- a/form.html
+++ b/form.html
@@ -84,37 +84,56 @@
 						</label></p>
 					</div>
 
-					<div class="input-field col s4 l2">
+					<div class="col s12">
+				        <h5>Front</h5>
+			        </div>
+					<div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="chest" type="text" class="validate">
 			        	<label class="active text-uppercase" for="chest">Chest</label>
 			        </div>
-			        <div class="input-field col s4 l2">
+			        <div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="waist" type="text" class="validate">
 			        	<label class="active text-uppercase" for="waist">Waist</label>
 			        </div>
-			        <div class="input-field col s4 l2">
+			        <div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="hips" type="text" class="validate">
 			        	<label class="active text-uppercase" for="hips">Hips</label>
 			        </div>
-					<div class="input-field col s4 l2">
+					<div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="inseam" type="text" class="validate">
 			        	<label class="active text-uppercase" for="inseam">Inseam</label>
 			        </div>
-			        <div class="input-field col s4 l2">
+			        <div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="neck" type="text" class="validate">
 			        	<label class="active text-uppercase" for="neck">Neck</label>
 			        </div>
-			        <div class="input-field col s4 l2">
+			        <div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="sleeve" type="text" class="validate">
 			        	<label class="active text-uppercase" for="sleeve">Sleeve</label>
 			        </div>
-					<div class="input-field col s4 l2">
+					<div class="input-field col s4 m2 l2">
 			        	<input placeholder="cm" id="height" type="text" class="validate">
 			        	<label class="active text-uppercase" for="height">Height</label>
 			        </div>
-			        <div class="input-field col s4 l2">
-			        	<input placeholder="cm" id="weight" type="text" class="validate">
-			        	<label class="active text-uppercase" for="weight">Weight</label>
+
+			        <div class="col s12">
+				        <h5>Side</h5>
+			        </div>
+					<div class="input-field col s4 m2 l2">
+			        	<input placeholder="cm" id="chest" type="text" class="validate">
+			        	<label class="active text-uppercase" for="chest">Chest</label>
+			        </div>
+			        <div class="input-field col s4 m2 l2">
+			        	<input placeholder="cm" id="waist" type="text" class="validate">
+			        	<label class="active text-uppercase" for="waist">Waist</label>
+			        </div>
+			        <div class="input-field col s4 m2 l2">
+			        	<input placeholder="cm" id="hips" type="text" class="validate">
+			        	<label class="active text-uppercase" for="hips">Hips</label>
+			        </div>
+			        <div class="input-field col s4 m2 l2">
+			        	<input placeholder="cm" id="neck" type="text" class="validate">
+			        	<label class="active text-uppercase" for="neck">Neck</label>
 			        </div>
 					<div class="col s12">
 						<button class="btn btn-block waves-effect waves-light" type="button">
@@ -125,6 +144,40 @@
 				</div>
 
 			</form>
+			<!-- <div class="carousel">
+				<div class="carousel-item" style="background-color: white; height: 100%">
+					 <div class="input-field col s4 m12 l2">
+			        	<input placeholder="cm" id="waist" type="text" class="validate">
+			        	<label class="active text-uppercase" for="waist">Waist</label>
+			        </div>
+			        <div class="input-field col s4 m12 l2">
+			        	<input placeholder="cm" id="hips" type="text" class="validate">
+			        	<label class="active text-uppercase" for="hips">Hips</label>
+			        </div>
+			        <div class="input-field col s4 m12 l2">
+			        	<input placeholder="cm" id="neck" type="text" class="validate">
+			        	<label class="active text-uppercase" for="neck">Neck</label>
+			        </div>
+				</div>
+				<div class="carousel-item" style="background-color: white; height: 100%">
+					 <div class="input-field col s4 m12 l2">
+			        	<input placeholder="cm" id="waist" type="text" class="validate">
+			        	<label class="active text-uppercase" for="waist">Waist</label>
+			        </div>
+			        <div class="input-field col s4 m12 l2">
+			        	<input placeholder="cm" id="hips" type="text" class="validate">
+			        	<label class="active text-uppercase" for="hips">Hips</label>
+			        </div>
+			        <div class="input-field col s4 m12 l2">
+			        	<input placeholder="cm" id="neck" type="text" class="validate">
+			        	<label class="active text-uppercase" for="neck">Neck</label>
+			        </div>
+				</div>
+			    <a class="carousel-item" href="#two!"><img src="images/sample.jpg"></a>
+			    <a class="carousel-item" href="#three!"><img src="images/sample.jpg"></a>
+			    <a class="carousel-item" href="#four!"><img src="images/sample.jpg"></a>
+			    <a class="carousel-item" href="#five!"><img src="images/sample.jpg"></a>
+			  </div> -->
 		</div>
 	</div>
 </body>
@@ -133,6 +186,9 @@
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
+		$('.carousel').carousel({
+			fullWidth: true
+		});
 		$('.sidenav').sidenav();
 		$('select').formSelect();
 		$('#loader').fadeOut();
