--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<a href="#" data-target="plots" class="sidenav-trigger"><i class="material-icons">linear_scale</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li class="active"><a class="waves-effect" href="form.html">Measurement Form</a></li>
-					<li><a class="waves-effect" href="!#">Image Interface</a></li>
+					<li><a class="waves-effect" href="#">Image Interface</a></li>
 				</ul>
 				<ul class="right show-on-med-and-down">
 					<li><a href="#" id="undo" class="waves-effect waves-light"><i class="material-icons left">undo</i> Undo</a></li>
@@ -30,8 +30,9 @@
 			<div class="nav-content">
 				<ul class="tabs tabs-transparent">
 					<li class="tab col s3"><a href="#plots-div">Plotted Points</a></li>
-					<li class="tab col s3"><a class="active" href="#front-view-image-div">Front View</a></li>
-					<li class="tab col s3"><a href="#side-view-image-div">Side View</a></li>
+					<li class="tab col s3"><a href="#upload-images-div">Upload</a></li>
+					<li class="tab col s3"><a class="active" href="#front-view-image-div"><i class="material-icons left">accessibility</i> Front View</a></li>
+					<li class="tab col s3"><a href="#side-view-image-div"><i class="material-icons left">directions_walk</i> Side View</a></li>
 					<li class="tab col s3"><a href="#measurement-form-div">Form</a></li>
 				</ul>
 			</div>
