--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 			<div class="nav-content">
 				<ul class="tabs tabs-transparent">
 					<li class="tab col s3"><a href="#plots-div">Plotted Points</a></li>
-					<li class="tab col s3"><a href="#upload-images-div">Upload</a></li>
-					<li class="tab col s3"><a class="active" href="#front-view-image-div"><i class="material-icons left">accessibility</i> Front View</a></li>
+					<li class="tab col s3"><a href="#front-view-image-div" class="active"><i class="material-icons left">accessibility</i> Front View</a></li>
 					<li class="tab col s3"><a href="#side-view-image-div"><i class="material-icons left">directions_walk</i> Side View</a></li>
 					<li class="tab col s3"><a href="#measurement-form-div">Form</a></li>
 				</ul>
