Plots now overwrite previous plots.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<li><label><input type="radio" value="body-sweep-f" name="front-target"> <span class="label-text">Body Sweep</span></label></li>
 					</ul>
 					<ul class="right">
-						<li><button id="undo-front" class="btn-flat waves-effect tooltipped" data-position="bottom" data-tooltip="undo"><i class="material-icons">undo</i></button></li>
+						<li><button id="undo-front" class="btn-flat disabled waves-effect tooltipped" data-position="bottom" data-tooltip="undo"><i class="material-icons">undo</i></button></li>
 						<li><button id="clear-front" class="btn-flat waves-effect tooltipped" data-position="bottom" data-tooltip="clear"><i class="material-icons">clear</i></button></li>
 					</ul>
 				</div>
@@ -93,7 +93,7 @@
 						<li><label><input type="radio" value="neck-s" name="side-target"> <span class="label-text">Neck</span></label></li>
 					</ul>
 					<ul class="right">
-						<li><button id="undo-side" class="btn-flat waves-effect tooltipped" data-position="bottom" data-tooltip="undo"><i class="material-icons">undo</i></button></li>
+						<li><button id="undo-side" class="btn-flat disabled waves-effect tooltipped" data-position="bottom" data-tooltip="undo"><i class="material-icons">undo</i></button></li>
 						<li><button id="clear-side" class="btn-flat waves-effect tooltipped" data-position="bottom" data-tooltip="clear"><i class="material-icons">clear</i></button></li>
 					</ul>
 				</div>
